--- a/wiki/%E7%B4%A0.wikitext
+++ b/wiki/%E7%B4%A0.wikitext
@@ -31,6 +31,39 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': sou3
 
+===Compounds===
+*[[素白]]
+*[[素不相识]]
+*[[素材]]
+*[[素菜]]
+*[[素餐]]
+*[[素常]]
+*[[素淡]]
+*[[素服]]
+*[[素裹]]
+*[[素洁]]
+*[[素净]]
+*[[素酒]]
+*[[素来]]
+*[[素昧平生]]
+*[[素面]]
+*[[素描]]
+*[[素朴]]
+*[[素气]]
+*[[素日]]
+*[[素什锦]]
+*[[素食]]
+*[[素数]]
+*[[素昔]]
+*[[素席]]
+*[[素性]]
+*[[素雅]]
+*[[素养]]
+*[[素油]]
+*[[素愿]]
+*[[素志]]
+*[[素质]]
+
 * '''Other info''': 
 
 ----
