fluffing up <господин#66795>

--- a/wiki/%D0%B3%D0%BE%D1%81%D0%BF%D0%BE%D0%B4%D0%B8%D0%BD.wikitext
+++ b/wiki/%D0%B3%D0%BE%D1%81%D0%BF%D0%BE%D0%B4%D0%B8%D0%BD.wikitext
@@ -1,9 +1,10 @@
-==[[Russian]]==
-Господин
+==Russian==
 
 ===Noun===
+'''господин''' ''m'' /gospodin/
+#A man of a higher rank or position
+#An address to any male, especially if his name or proper address is unknown
 
-/gospodin/
 
-====translation====
-[[sir]], [[mister]]
+====Translations====
+*English: [[sir]], [[mister]]
