--- a/wiki/master.wikitext
+++ b/wiki/master.wikitext
@@ -1,3 +1,23 @@
-*Adjective - highly [[skilled]]
-*Verb - learn to a high degree of [[profifiency]]
-*Noun - owner of a [[slave]]
+==English==
+===Noun===
+
+# owner of a [[slave]]
+
+===Adjective===
+
+# [[main]]
+# highly [[skilled]]
+
+===Verb===
+
+# [[control]]
+# learn to a high degree of [[profifiency]]
+
+===Related terms===
+*[[master card]]
+*[[masterful]]
+*[[master key]]
+*[[masterly]]
+*[[masterpiece]]
+*[[mastership]]
+*[[mastery]]
