--- a/wiki/Mr.wikitext
+++ b/wiki/Mr.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Abbreviation===
-'''Mr''', abbreviation/corruption of [[master]]
+'''Mr''', abbreviation/corruption of [[mister]]
 # A title used before an adult male's name or surname.
 #:''Mr John Doe''
 #:''Mr Doe''
