/* See also */ <a priori#66798>

--- a/wiki/a_priori.wikitext
+++ b/wiki/a_priori.wikitext
@@ -13,5 +13,5 @@ First attested [[w:1710|1710]], from [[Latin]] literally ''from the former'', fr
 ===Antonyms===
 *[[a posteriori]]
 
-==See also==
+===See also===
 For further information see [[w:a priori|Wikipedia article on ''a priori'']]
