--- a/wiki/%E6%9B%B2.wikitext
+++ b/wiki/%E6%9B%B2.wikitext
@@ -11,33 +11,74 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#crooked, bent
-*# wrong, false
+*# [[crook]]ed, [[bent]]
+*# [[wrong]], [[false]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': qǔ (qu3)
-*** '''[[Wade-Giles]]''': ch'ü<sup>3</sup>
+*** '''[[Pinyin]]''': qū (qu1), qǔ (qu3)
+*** '''[[Wade-Giles]]''': ch'ü<sup>1</sup>, ch'ü<sup>3</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': kuk1
 
+===Compounds===
+#qū
+#*[[曲笔]]
+#*[[曲别针]]
+#*[[曲尺]]
+#*[[曲棍球]]
+#*[[曲解]]
+#*[[曲尽其妙]]
+#*[[曲径]]
+#*[[曲里拐弯]], [[曲里拐弯儿的]]
+#*[[曲面]]
+#*[[曲曲弯弯]]
+#*[[曲射炮]]
+#*[[曲水流觞]]
+#*[[曲线]]
+#*[[曲意逢迎]]
+#*[[曲折]]
+#*[[曲直]]
+#qǔ
+#*[[曲笛]]
+#*[[曲调]]
+#*[[曲高和寡]]
+#*[[曲目]]
+#*[[曲牌]]
+#*[[曲谱]]
+#*[[曲坛]]
+#*[[曲艺]]
+#*[[曲终奏雅]]
+#*[[曲子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[きょく]] (kyoku)
 ** '''[[Kun]]''': [[まがる]] (magaru), [[まげる]] (mageru), [[くま]] (kuma)
+
+===Compounds===
+*[[曲解]]
+*[[曲技]]
+*[[曲芸]]
+*[[曲射]]
+*[[曲折]]
+*[[曲面]]
+*[[曲目]]
+*[[曲論]]
+*[[曲者]]
 
 * '''Other info''':  
 
