--- a/wiki/pois.wikitext
+++ b/wiki/pois.wikitext
@@ -2,6 +2,6 @@
 
 ===Noun===
 
-'''poi(s)'''
+'''pois'''
 
 #Hawaiian food made from the tuber of the taro that is cooked, pounded to a paste, and fermented.
