--- a/wiki/moonbat.wikitext
+++ b/wiki/moonbat.wikitext
@@ -1,5 +1,8 @@
-a)One who attempts to simultaneously stick his foot in his mouth while comparing his opponent to Hitler.~ "How dare you oppose nationalized healthcare?! You Nazi!"
+a)One who attempts to simultaneously stick his foot in his mouth while comparing his opponent to Hitler.
+  ''"How dare you oppose nationalized healthcare?! You Nazi!"''
 
-b) One who, rejecting rational arguments, relies upon ad hominem attacks focusing on the opponent's education and resemblance to Hitler.~ "You know, Hitler also liked to eat sandwiches!"
+b) One who, rejecting rational arguments, relies upon ad hominem attacks focusing on the opponent's education and resemblance to Hitler.
+   ''"You know, Hitler also liked to eat sandwiches!"''
 
-c)A person who displays sudden leap from nondisputed facts to a conclusion that would baffle the idiots in the asylum. ~ "Yes, I agree that dogs are frequently housepets, that they are mammals, and that they  bark. But don't you see that they are republican overlords intent on selling us to the wombats?"
+c)A person who displays sudden leap from nondisputed facts to a conclusion that would baffle the idiots in the asylum. 
+   ''"Yes, I agree that dogs are frequently housepets, that they are mammals, and that they  bark. But don't you see that they are republican overlords intent on selling us to the wombats?"''
