--- a/wiki/slowly.wikitext
+++ b/wiki/slowly.wikitext
@@ -11,6 +11,7 @@
 *French: [[lentement]]
 *Georgian: [[ნელა]] (nela)
 *German: [[langsam]]
+*Italian: [[lentamente]]
 
 ===Antonyms===
 *[[quickly]]
