--- a/wiki/nerd.wikitext
+++ b/wiki/nerd.wikitext
@@ -11,7 +11,7 @@ nû(r)d, /nɜː(r)d/, /<tt>n3:(r)d</tt>/
 *:[[Rhymes:English:-ɜː(r)d|Rhymes: -ɜː(r)d]]
 
 ===Noun===
-'''nerd''' (plural: [[nerds]])
+'''nerd''' (plural: nerds)
 
 # (''slang, derogatory'') A person who is technically highly skilled but lacks social skills.
 
@@ -19,7 +19,7 @@ nû(r)d, /nɜː(r)d/, /<tt>n3:(r)d</tt>/
 *(''socially unaccepted person''): (''all are slang and derogatory''):  [[dag]] (''Australian''), [[dork]], [[dweeb]], [[geek]], [[loser]]
 
 ====Derived terms====
-*[[nerdy]]
+*nerdy
 
 ====Translations====
 *Finnish: [[nörtti]]
