--- a/wiki/waiter.wikitext
+++ b/wiki/waiter.wikitext
@@ -14,6 +14,7 @@
 *Slovak: [[čašník]] ''m''
 *[[Spanish]]: [[mesero]] (1)
 *Swedish: [[kypare]] ''c''(1), [[väntande]] (2)
+*Greek: [[Σερβιτόρος]]
 
 ===Related Words===
 *[[wait]]
