--- a/wiki/slowly.wikitext
+++ b/wiki/slowly.wikitext
@@ -7,11 +7,12 @@
 #At a slow pace
 
 ====Translations====
-*Dutch: [[traag]], [[traagjes]], [[langzaamaan]]
-*French: [[lentement]]
-*Georgian: [[ნელა]] (nela)
-*German: [[langsam]]
-*Italian: [[lentamente]]
+*[[Dutch]]: [[traag]], [[traagjes]], [[langzaamaan]]
+*[[French]]: [[lentement]]
+*[[Georgian]]: [[ნელა]] (nela)
+*[[German]]: [[langsam]]
+*[[Italian]]: [[lentamente]]
+*[[Spanish]]: [[lentamente]]
 
 ===Antonyms===
 *[[quickly]]
