--- a/wiki/certainly.wikitext
+++ b/wiki/certainly.wikitext
@@ -5,10 +5,10 @@
 #Without doubt
 
 ====Translations====
-*French: [[certainement]]
-*German: [[sicherlich]]
-*Italian: [[certamente]]
-*Spanish: [[ciertamente]]
+*[[French]]: [[certainement]]
+*[[German]]: [[sicherlich]]
+*[[Italian]]: [[certamente]]
+*[[Spanish]]: [[ciertamente]]
 
 ===Related words===
 *[[certain]]
