--- a/wiki/pois.wikitext
+++ b/wiki/pois.wikitext
@@ -1,7 +1,13 @@
 ==English==
-
 ===Noun===
-
 '''pois'''
 
 #Hawaiian food made from the tuber of the taro that is cooked, pounded to a paste, and fermented.
+
+----
+
+==French==
+===Noun===
+'''pois''' ''m''
+
+# [[pea]]
