--- a/wiki/llamah.wikitext
+++ b/wiki/llamah.wikitext
@@ -2,7 +2,7 @@
 *Someone who makes a fool of himself on the [[Internet]] (mainly on [[IRC]]).
 
 ==Origins==
-'''Llamah''' is a term derived from [[lamer]] after the later evolved through use in the internet. Llamah is a subgroup of lamers, a lamer need not be a llamah.
+'''Llamah''' is a term derived from [[lamer]] after the later evolved through use in the internet. Llamahs are a subgroup of lamers. A lamer need not be a llamah.
 Llamahs are usually pictured as [[Llama]]s
 
 ==Fun Facts==
