--- a/wiki/tip.wikitext
+++ b/wiki/tip.wikitext
@@ -1,10 +1,9 @@
-== Etymology ==
+==English==
 
-*In the sense of gratuity, originally a small amount of beverage (i.e. tipple) left in a glass for the bartender
-*A Small amount of money left for the [[waiter]] as a token of appreciation.
-*A Small amount of information (see [[hint]], [[clue]])
+#In the sense of gratuity, originally a small amount of beverage (i.e. tipple) left in a glass for the bartender
+#A Small amount of money left for the [[waiter]] as a token of appreciation.
+#A Small amount of information (see [[hint]], [[clue]])
 
-
-== Translations ==
+=== Translations ===
 
 *Greek: [[Φιλοδόρημα]]
