--- a/wiki/%D8%A7%D9%86%D8%AA.wikitext
+++ b/wiki/%D8%A7%D9%86%D8%AA.wikitext
@@ -1,10 +1,10 @@
 ==Arabic==
 ===Pronoun===
-'''أنْتَ''' (’ínta) ''m'', [[انتوا|أنْتُوا]] (’íntu) ''pl''
+'''أنْتَ''' (’ánta) ''m'', [[انتوا|أنْتُوا]] (’íntu) ''pl''
 
 # [[you]]
 
 ===Pronoun===
-'''أنْتِ''' (’ínti) ''f'', [[انتوا|أنْتُوا]] (’íntu) ''pl''
+'''أنْتِ''' (’ánti) ''f'', [[انتوا|أنْتُوا]] (’íntu) ''pl''
 
 # [[you]]
