--- a/wiki/immobile.wikitext
+++ b/wiki/immobile.wikitext
@@ -1,13 +1,51 @@
-==[[Adjective]]==
+==English==
+===Adjective===
 
 #not moving
-
 #fixed, unable to be moved
+
 ===Antonyms===
 *[[mobile]]
 
 ===Translation===
-*[[French]]: [[immobile]]
-*[[German]]: [[unbeweglich]]
-*[[Italian]]: [[immobile]]
-*[[Spanish]]: [[inmóvil]]
+*French: immobile
+*German: [[unbeweglich]]
+*Italian: immobile]]
+*Spanish: [[inmóvil]]
+
+===Related terms===
+*[[immobility]]
+
+----
+
+==French==
+===Adjective===
+'''immobile'''
+
+# [[immovable]], immobile
+# [[invariable]]
+
+===Related terms===
+*[[immobilier]]
+*[[immobilisation]]
+*[[immobiliser]]
+*[[immobilité]]
+
+----
+
+==Italian==
+===Adjective===
+'''immobile'''
+
+# [[immovable]], immobile
+
+===Noun===
+'''immobile'''
+
+# immovable
+
+===Related terms===
+*[[immobiliare]]
+*[[immobilismo]]
+*[[immoblità]]
+*[[immobilizzare]]
