--- a/wiki/immobile.wikitext
+++ b/wiki/immobile.wikitext
@@ -10,7 +10,7 @@
 ===Translation===
 *French: immobile
 *German: [[unbeweglich]]
-*Italian: immobile]]
+*Italian: immobile
 *Spanish: [[inmóvil]]
 
 ===Related terms===
