--- a/wiki/permissible.wikitext
+++ b/wiki/permissible.wikitext
@@ -1,23 +1,27 @@
 ==English==
-
 ===Adjective===
-
 '''permissible''' 
+
 
 ===Synonyms===
 * [[allowed]]
 
 ====Translations====
-'''permissible'''
+
 {| border=0 width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*'''German''': [[zulässig]]
+*German: [[zulässig]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+
 |}
 |}
+
+===Related terms===
+*[[permissibly]]
+*[[permission]]
+*[[permit]]
