--- a/wiki/bread.wikitext
+++ b/wiki/bread.wikitext
@@ -26,7 +26,7 @@
 *Japanese: [[パン]] (pan)
 *Lithuanian: [[duona]] ''f'' (1)
 *Macedonian: [[леб]] (leb)
-*Polish: [[chleb]]
+*Polish: [[chleb]] ''m''
 *Portuguese: [[pão]] ''m''
 *Romanian: [[pâine]] ''f''
 *[[Romanica]]: [[pan]] ''m''
