--- a/wiki/retail.wikitext
+++ b/wiki/retail.wikitext
@@ -1,4 +1,15 @@
 ===Translations===
 
-*Dutch: [[detailhandel]]
-*German: [[Einzelhandelsabsatz]], [[Kleinverkauf]]
+'''retail'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*'''Dutch''': [[detailhandel]]
+*'''German''': [[Einzelhandel]] ''m'', [[Einzelhandelsabsatz]] ''m'', [[Kleinverkauf]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+|}
+|}
