--- a/wiki/invariant.wikitext
+++ b/wiki/invariant.wikitext
@@ -13,11 +13,11 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*German: [[unveränderlich]]
+*'''German''': [[unveränderlich]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+<!--languages from J to Z go here-->
 |}
 |}
