--- a/wiki/move.wikitext
+++ b/wiki/move.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 *Finnish: [[liikkua]] (1), [[siirtyä]] (1), [[siirtää]] (2)
+{{nl}}: bewegen
 
 ===Noun===
 '''move''' ([[moves]])
