--- a/wiki/move.wikitext
+++ b/wiki/move.wikitext
@@ -6,7 +6,7 @@
 #take something and put it to new place
 
 ====Translations====
-*Finnish: [[liikkua]] (1), [[siirtyä]] (1), [[siirtää]] (2)
+{{fi}}: [[liikkua]] (1), [[siirtyä]] (1), [[siirtää]] (2)
 {{nl}}: bewegen
 
 ===Noun===
@@ -14,3 +14,4 @@
 
 ====Translations====
 *Hebrew: [[תנועה|תְּנוּעָה]] ''f''
+{{nl}}: zet
