--- a/wiki/root.wikitext
+++ b/wiki/root.wikitext
@@ -24,6 +24,91 @@
 *(8 vulgar slang): [[screw]] (''US''), [[shag]] (''British'') - see [[WikiSaurus:sexual intercourse]]
 
 ==== Translations ====
+
+'''plant root''' (noun)
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Arabic: [[‎جذر|جَذْرٌ]] (džaðr) ''m''; [[‎جذور|جُذُور]] (džuðúːr) ''pl''
+*Bulgarian: [[корен]] (koren) ''m''
+*Catalan: [[arrel]] ''f''
+*Chinese: [[根]] (gēn)
+*Croatian: [[koren]] ''m''
+*Czech: [[kořen]] ''m''
+*Danish: [[rod#Danish|rod]]
+*Dutch: [[wortel]]
+*Finnish: [[juuri]]
+*French: [[racine]] ''f''
+*Galician: [[raíz]] ''f''
+*German: [[Wurzel]] ''f'', [[Wurzeln]] ''pl''
+*Greek: [[ρίζα]] (ríza) ''f''
+*Hebrew: [[שורש]] (šóreš) ''m''
+*Hungarian: [[gyökér]]
+*Icelandic: [[rót]]
+*Indonesian: [[akar]]
+*Italian: [[radice]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Japanese: [[根]] ([[ね]], ne)
+*Korean: [[뿌리]] (ppuri)
+*Latin: [[radix]] ''f''
+*Norwegian: [[rot#Norwegian|rot]]
+*Occitan: [[raiç]] ''f''
+*{{pl}}: [[korzeń]] ''m''
+*Portuguese: [[raiz]] ''f''
+*Russian: [[корень]] (kóren') ''m'', [[корни]] (kórni) ''pl''; [[коренья]] (korén'ja) ''pl (roots for cooking)''
+*Serbian: [[корен]] (koren) ''m''
+*Slovene: [[korenina]] ''f''
+*Spanish: [[raíz]] ''f'', [[raíces]] ''pl''
+*Swahili: [[mzizi]], [[mizizi]] ''(noun class 4)''
+*Swedish: [[rot#Swedish|rot]] ''c'', [[rötter]] ''pl''
+*[[Tagalog]]: [[ugat]]
+*Turkish: [[kök]]
+*Ukrainian: [[корінь]] (kórin') ''m'', [[корені]] (koréni) ''pl''
+|}
+|}
+==== Translations ====
+
+'''root of a tooth''' (noun)
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Arabic: [[‎جذر|جَذْرٌ]] (džaðr) ''m''; [[‎جذور|جُذُور]] (džuðúːr) ''pl''
+*Bulgarian: [[корен]] (koren) ''m''
+*Catalan: [[arrel]] ''f''
+*Chinese: [[根]] (gēn)
+*Czech: [[kořen]] ''m''
+*Danish: [[rod#Danish|rod]]
+*Dutch: [[wortel]]
+*Finnish: [[juuri]]
+*French: [[racine]] ''f''
+*Galician: [[raíz]] ''f''
+*German: [[Wurzel]] ''f'', [[Wurzeln]] ''pl''
+*Italian: [[radice]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*Japanese: [[歯根]] ([[しこん]], shikon)
+*Korean: [[뿌리]] (ppuri)
+*Latin: [[radix]] ''f''
+*Occitan: [[raiç]] ''f''
+*{{pl}}: [[źródło]] ''n''
+*Portuguese: [[raiz]] ''f''
+*Russian: [[корень]] (kóren') ''m'', [[корни]] (kórni) ''pl''
+*Spanish: [[raíz]] ''f'', [[raíces]] ''pl''
+*Swedish: [[källa]]
+*Turkish: [[kök]]
+*Ukrainian: [[корінь]] (kórin') ''m'', [[корені]] (koréni) ''pl''
+|}
+|}
+
+==== Translations ====
+
 *Arabic: [[‎جذر|جَذْرٌ]] (džaðr) ''m''; [[‎جذور|جُذُور]] (džuðúːr) ''pl''
 *Bulgarian: [[корен]] (koren) ''m''
 *Catalan: [[arrel]] ''f''
@@ -47,14 +132,14 @@
 *Latin: [[radix]] ''f''
 *Norwegian: [[rot#Norwegian|rot]]
 *Occitan: [[raiç]] ''f''
-*{{pl}}: [[korzeń]] ''m'' (1,5), [[źródło]] ''n'' (2), [[pierwiastek]] ''m'' (3,4)
+*{{pl}}: [[pierwiastek]] ''m'' (3,4), [[korzeń]] ''m'' (5)
 *Portuguese: [[raiz]] ''f''
 *Russian: [[корень]] (kóren') ''m'', [[корни]] (kórni) ''pl''; [[коренья]] (korén'ja) ''pl (roots for cooking)''
 *Serbian: [[корен]] (koren) ''m''
-*Slovene: [[korenina]] ''f'' (1), [[koren]] ''m'' (3,6)
+*Slovene: [[koren]] ''m'' (3,6)
 *Spanish: [[raíz]] ''f'', [[raíces]] ''pl'' (with all these senses)
 *Swahili: [[mzizi]], [[mizizi]] ''(noun class 4)''
-*Swedish: [[rot#Swedish|rot]] ''c'', [[rötter]] ''pl'' (1,3,4,6), [[källa]] (2), [[nollställe]] (4)
+*Swedish: [[rot#Swedish|rot]] ''c'', [[rötter]] ''pl'' (3,4,6), [[nollställe]] (4)
 *[[Tagalog]]: [[ugat]]
 *Turkish: [[kök]]
 *Ukrainian: [[корінь]] (kórin') ''m'', [[корені]] (koréni) ''pl''
