/* Derived terms */ *[[blogosphere]] <blog#41252>

--- a/wiki/blog.wikitext
+++ b/wiki/blog.wikitext
@@ -9,6 +9,7 @@ Shorted from [[web log]]
 
 ====Derived terms====
 *[[blogger]]
+*[[blogosphere]]
 
 ===Verb===
 '''to blog''' ([[blogs]], [[blogged]], [[blogging]])
