--- a/wiki/ahistorical.wikitext
+++ b/wiki/ahistorical.wikitext
@@ -1,2 +1,4 @@
+==English==
 ===Adjective===
-Lacking historical perspective or context.
+'''ahistorical'''
+#Lacking historical perspective or context.
