--- a/wiki/feminism.wikitext
+++ b/wiki/feminism.wikitext
@@ -1,5 +1,4 @@
 ==English==
 ===Noun===
 '''Feminism'''
-
-#A movement supporting Gender-Egalitarianism.
+#A movement supporting equality of gender.
