more fi <cabbage#42226>

--- a/wiki/cabbage.wikitext
+++ b/wiki/cabbage.wikitext
@@ -17,7 +17,7 @@
 
 ====Translations====
 *Czech: [[zelí]] ''n'' (1, 2)
-*Finnish: [[kaali#Finnish|kaali]] (1, 2)
+*Finnish: [[kaali#Finnish|kaali]] (1, 2), [[vihannes]] (3)
 *French: [[chou]] ''m'' (2)
 *German: [[Kohl]] ''m'' (2)
 *Hebrew: [[כרוב|כְּרוּב]] ''m'' (1/2)
