--- a/wiki/9_to_5.wikitext
+++ b/wiki/9_to_5.wikitext
@@ -2,6 +2,11 @@
 
 ----
 '''''9 to 5''''' is a [[1980 in film|1980]] film comedy about working women living out the fantasy of getting even with the male boss. It starred [[Jane Fonda]], [[Lily Tomlin]] and [[Dolly Parton]] in her film [[debut]]. The title song was written and performed by Parton gaining an [[Academy Award]] nomination and a [[Grammy Award]]. It was also #78 on [[American Film Institute]]'s 100 years, 100 songs.
+
+----
+
+"'''9 to 5'''" is also the title of a popular song recorded by [[Sheena Easton]] in [[1980]], becoming her first major hit. The title of the song was changed to "Morning Train (9 to 5)" for North American release to avoid confusion with the Dolly Parton song mentioned, above.
+
 [[Category:1980 films]]
 [[Category:AFI 100 Laughs]]
  [[Category:AFI 100 Songs]]
