--- a/wiki/9_to_5.wikitext
+++ b/wiki/9_to_5.wikitext
@@ -7,6 +7,8 @@
 
 "'''9 to 5'''" is also the title of a popular song recorded by [[Sheena Easton]] in [[1980]], becoming her first major hit. The title of the song was changed to "Morning Train (9 to 5)" for North American release to avoid confusion with the Dolly Parton song mentioned, above.
 
+It's interesting to note the extreme differences between the two "9 to 5" songs, even though they were recorded the same year. Parton's song is about female liberation (as is the movie), while Easton's song is about a woman who waits at home all day for her man to come home from work.
+
 [[Category:1980 films]]
 [[Category:AFI 100 Laughs]]
  [[Category:AFI 100 Songs]]
