--- a/wiki/Mormon.wikitext
+++ b/wiki/Mormon.wikitext
@@ -3,7 +3,7 @@
 '''Mormon''', plural '''[[Mormons]]''' 
 
 # A person who belongs to the [[Christian]] [[sect]] established through (or possibly founded by) [[w:Joseph Smith, Jr.|Joseph Smith, Jr.]].  The sect is known as the [[church|Church]] of [[Jesus]] [[Christ]] of [[latter|Latter]]-day [[saint|Saints]].
-# The [[prophet]] who wrote the [[Book of Mormon]], according to Mormon theology.
+# The ancient american [[prophet]] who compiled the [[Book of Mormon]], according to Mormon theology.
 
 ====Synonyms====
 *[[Latter-day Saint]]
