--- a/wiki/Mormon.wikitext
+++ b/wiki/Mormon.wikitext
@@ -1,9 +1,9 @@
 ==English==
 ===Noun===
-'''Mormon''', plural '''[[Mormons]]''' 
+'''Mormon''', plural '''Mormons''' 
 
 # A person who belongs to the [[Christian]] [[sect]] established through (or possibly founded by) [[w:Joseph Smith, Jr.|Joseph Smith, Jr.]].  The sect is known as the [[church|Church]] of [[Jesus]] [[Christ]] of [[latter|Latter]]-day [[saint|Saints]].
-# The ancient american [[prophet]] who compiled the [[Book of Mormon]], according to Mormon theology.
+# The [[prophet]] who compiled the [[Book of Mormon]], according to Mormon theology.
 
 ====Synonyms====
 *[[Latter-day Saint]]
