--- a/wiki/Mormon.wikitext
+++ b/wiki/Mormon.wikitext
@@ -6,7 +6,7 @@
 # The [[prophet]] who compiled the [[Book of Mormon]], according to Mormon theology.
 
 ====Synonyms====
-*[[Latter-day Saint]]
+*[[Latter-day Saints]]
 
 ====Derived terms====
 *[[Mormonism]]
