--- a/wiki/Mormon.wikitext
+++ b/wiki/Mormon.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''Mormon''', plural '''Mormons''' 
 
-# A person who belongs to the [[Christian]] [[sect]] established through (or possibly founded by) [[w:Joseph Smith, Jr.|Joseph Smith, Jr.]].  The sect is known as the [[church|Church]] of [[Jesus]] [[Christ]] of [[latter|Latter]]-day [[saint|Saints]].
+# A person who belongs to the [[Christian]] [[sect]] related to the religion founded by [[w:Joseph Smith, Jr.|Joseph Smith, Jr.]].  Its largest sect is known as The [[church|Church]] of [[Jesus]] [[Christ]] of [[latter|Latter]]-day [[saint|Saints]].
 # The [[prophet]] who compiled the [[Book of Mormon]], according to Mormon theology.
 
 ====Synonyms====
