--- a/wiki/Mormon.wikitext
+++ b/wiki/Mormon.wikitext
@@ -3,7 +3,7 @@
 '''Mormon''', plural '''Mormons''' 
 
 # A person who belongs to the [[Christian]] [[sect]] related to the religion founded by [[w:Joseph Smith, Jr.|Joseph Smith, Jr.]].  Its largest sect is known as The [[church|Church]] of [[Jesus]] [[Christ]] of [[latter|Latter]]-day [[saint|Saints]].
-# The [[prophet]] who compiled the [[Book of Mormon]], according to Mormon theology.
+# The ancient American [[prophet]] of Mormon theology who compiled the [[Book of Mormon]].
 
 ====Synonyms====
 *[[Latter-day Saints]]
