--- a/wiki/shag.wikitext
+++ b/wiki/shag.wikitext
@@ -3,21 +3,21 @@
 ===Etymology===
 From Old English ''sceacga'', ''sceaga'' ([[coppice]]), related to Old Norse ''skegg'' ([[beard]])
 
-====Noun====
+===Noun===
 #a [[cormorant]], especially with a crest
 #a type of carpet pile
+#a [[swing]] [[dance]]
 #the act of shagging, as in "have a good shag", as in [[sexual intercourse]]
 #a person treated as a object of the act of shagging, as in "she's a good shag"
 
-=====Synonyms=====
+====Synonyms====
 *see [[WikiSaurus:sexual intercourse]]
 
-===Etymology===
-Unknown origin ([[circa|c.]] 18th Century)
 
-====Transitive verb====
+===Transitive verb===
 ''to shag'' (shagged, shagging)
-#(''British, course'') to have [[sexual intercourse]] with someone willing, or as an action upon someone unwilling.
+#(''British, course'') to have [[sexual intercourse]] with someone willing, or as an action upon someone unwilling.  Many English speakers from outside the British Isles will be familiar with this use of the term from the [[wikipedia:Austin Powers|Austin Powers]] films (for example in the line ''"Shall we shag now, or shall we shag later?"''). Sometimes, the term is used to refer to [[masturbation]].
+#to chase after; especially : to chase after and return (a ball) hit usually out of play
 
-=====Synonyms=====
+====Synonyms====
 see [[WikiSaurus:sexual intercourse]]
