--- a/wiki/laminak.wikitext
+++ b/wiki/laminak.wikitext
@@ -1,2 +1,7 @@
 Laminak: 1) Basque fairies, related to the Celtic little people. The Laminak live underground in beautiful castles. 
 2) A hotel.
+Name : Hotel Hotel Laminak Hotel ***
+Address : Route de Saint-Pée
+Ville : ARBONNE
+Code postal : 64210
+Pays : FRANCE
