--- a/wiki/laminak.wikitext
+++ b/wiki/laminak.wikitext
@@ -1,5 +1,5 @@
-Laminak: 1) Basque fairies, related to the Celtic little people. The Laminak live underground in beautiful castles. 
-2) A hotel.
+Laminak: 1) [Lamb-uh-nack] Noun. Basque fairies, related to the Celtic little people. The Laminak live underground in beautiful castles. 
+2) [Lamb-uh-nack]Noun. A hotel.
 Name : Hotel Hotel Laminak Hotel ***
 Address : Route de Saint-Pée
 Ville : ARBONNE
