--- a/wiki/laminak.wikitext
+++ b/wiki/laminak.wikitext
@@ -1,4 +1,6 @@
-Laminak: 1) [Lamb-uh-nack] Noun. Basque fairies, related to the Celtic little people. The Laminak live underground in beautiful castles.
+Laminak: 1) [Lamb-uh-nack] Noun. Basque fairies, related to the Celtic 
+
+little people. The Laminak live underground in beautiful castles.
  
 2) [Lamb-uh-nack]Noun. A hotel.
 
