--- a/wiki/hojillion.wikitext
+++ b/wiki/hojillion.wikitext
@@ -1,4 +1,4 @@
 '''HOJILLION (n):''' The amount of money necessary for sex with erotic professionals, non-stop, for an average human lifespan.  English Slang.
 
-Original useage arrtibuted to Tycho of [http://www.pennyarcade.com Penny Arcade].  ''"I am not an industry analyst, so I dont feel like I'm qualified to talk about ebb and flow of hojillion dollar industries.''
+Original usage attributed to Tycho of [http://www.pennyarcade.com Penny Arcade].  ''"I am not an industry analyst, so I don't feel like I'm qualified to talk about ebb and flow of hojillion dollar industries.''
 Defined by [http://slashdot.org/~wildwood wildwood] of [http://slashdot.org slashdot] in this [http://games.slashdot.org/comments.pl?sid=130843&cid=10944336 post].
