--- a/wiki/laminak.wikitext
+++ b/wiki/laminak.wikitext
@@ -1,4 +1,13 @@
-Laminak: 1) [Lamb-uh-nack] Noun. Basque fairies, related to the Celtic 
+Laminak
+
+==English==
+
+Laminak
+
+==Noun==
+
+
+1) [Lamb-uh-nack] Noun. Basque fairies, related to the Celtic 
 
 little people. The Laminak live underground in beautiful castles.
  
