Now with proper formatting! <polystyrene#66834>

--- a/wiki/polystyrene.wikitext
+++ b/wiki/polystyrene.wikitext
@@ -1,3 +1,9 @@
-Synonyms:
+==English==
+=== Noun ===
+'''polystyrene'''
+# vinylic (Vinyl) polymer of styrene, CH2CHphenyl.
+# Alkane chain of benzene molecules, RCH2CHphenylR.
 
-Styrofoam
+=== Synonyms ===
+
+Styrofoam (TM)
