--- a/wiki/blogosphere.wikitext
+++ b/wiki/blogosphere.wikitext
@@ -2,3 +2,5 @@
 ===Noun===
 '''blogosphere'''
 #''Internet.'' Refers to the totality of [[blog]]s, especially to the unique jargons, cultures and shared interests that are created by the interconnected blogs.
+===Quotations===
+*'''2004''' ''Regular guest and blogger, Kos of DailyKos.com, provides Sam and Janeane the latest information from the blogosphere.'', Air America Radio [http://www.airamericaradio.com/].
