--- a/wiki/Meg.wikitext
+++ b/wiki/Meg.wikitext
@@ -1,1 +1,6 @@
-A person that goes by the name of "Meg" who is often very weird.
+==English==
+
+===Proper noun===
+'''Meg'''
+
+# A [[diminutive]] of [[Megan]].
