--- a/wiki/tea.wikitext
+++ b/wiki/tea.wikitext
@@ -46,6 +46,7 @@ From Chinese dialect, Minnan, which pronounces this word, [[茶]] [[Image:Tea.bm
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Latvian: [[tēja]] ''f''
+*{{pl}}: [[herbata#Polish|herbata]] ''f''
 *Russian: [[чай]] ''m'' (chay)
 *{{sk}}: [[čaj#Slovak|čaj]] ''m''
 |}
@@ -61,12 +62,13 @@ From Chinese dialect, Minnan, which pronounces this word, [[茶]] [[Image:Tea.bm
 *Finnish: [[tee#Finnish|tee]]
 *{{fr}}: [[thé]] ''m''
 *Greek: [[τσάι]] ''n''
+*{{it}}: [[tè]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*{{it}}: [[tè]] ''m''
 *Latvian: [[tēja]] ''f''
+*{{pl}}: [[herbata#Polish|herbata]] ''f''
 *Russian: [[чай]] (chay)
 *[[Sinhala]]: [[තේ]]<!-- තෝ also -->
 *{{sk}}: [[čaj#Slovak|čaj]] ''m''
@@ -81,6 +83,7 @@ From Chinese dialect, Minnan, which pronounces this word, [[茶]] [[Image:Tea.bm
 {|
 *Finnish: [[tee#Finnish|tee]], [[kuppi]] [[tee#Finnish|teetä]]
 *Latvian: [[tēja]] ''f''
+*{{pl}}: [[szklanka#Polish|szklanka]] [[herbata#Polish|herbaty]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -97,6 +100,7 @@ From Chinese dialect, Minnan, which pronounces this word, [[茶]] [[Image:Tea.bm
 {|
 *Finnish: [[tee#Finnish|tee]], [[haude#Finnish|haude]]
 *French: [[tisane]] ''f''
+*{{pl}}: [[herbata#Polish|herbata]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -113,11 +117,12 @@ From Chinese dialect, Minnan, which pronounces this word, [[茶]] [[Image:Tea.bm
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Latvian: [[tēja]] ''f''
+*{{pl}}: [[herbata#Polish|herbata]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
-*{{sk}}: [[čaj#Slovak|čaj]] ''m''
 {|
+*{{sk}}: [[čaj#Slovak|čaj]] ''m''
 |}
 |}
 
@@ -128,12 +133,13 @@ From Chinese dialect, Minnan, which pronounces this word, [[茶]] [[Image:Tea.bm
 {|
 *Finnish: [[välipala]], [[kahvi#Finnish|kahvit]] ''pl''
 *French: [[goûter]] ''m''
+*Latvian: [[tēja]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Latvian: [[tēja]] ''f''
-*{{sk}}: [[olovrant#Slovak|olovrant]] ''m''
+*Polish: [[podwieczorek#Polish|podwieczorek]] ''m''
+*Slovak: [[olovrant#Slovak|olovrant]] ''m''
 |}
 |}
 
@@ -153,7 +159,6 @@ The translations below need to be checked by native speakers and inserted into t
 *Korean: [[차]] (cha)
 *Malay: [[ca]], [[teh]]
 *Norwegian: [[te]] ''c''
-*{{pl}}: [[herbata]] ''f''
 *{{pt}}: [[chá]] ''m''
 *Slovene: [[čaj]] ''m''
 *{{es}}: [[té]] ''m''
