--- a/wiki/%E9%94%9C.wikitext
+++ b/wiki/%E9%94%9C.wikitext
@@ -31,7 +31,7 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[錡]]
 
-* '''Other info''': 
+* '''Other info''': 姓
 
 ----
 
