--- a/wiki/%E9%94%9C.wikitext
+++ b/wiki/%E9%94%9C.wikitext
@@ -31,7 +31,7 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[錡]]
 
-* '''Other info''': 姓，锜姓者，目前主要居于福建省福清市（约千人左右）和福建省安溪县（人数不详），台湾也有若干人。有疑问者可联系邮箱aa1937@hotmail.com或aa1937@sina.com。
+* '''Other info''': 姓，锜姓者，目前主要居于福建省福清市（近两千人）和福建省安溪县（人数不详），台湾也有若干人。有疑问者可联系邮箱aa1937@hotmail.com或aa1937@sina.com。
 
 ----
 
