--- a/wiki/kaput.wikitext
+++ b/wiki/kaput.wikitext
@@ -1,4 +1,4 @@
 '''Kaput''' or '''kaputt''' adj. (informal)
 :Out of order; not working; broken.
 
-From the German ''kaputt'', though  more often rendered ''kaput'' in English.  The same word is also borrowed from German into Greek, with approximately the same meaning.
+From the German ''kaputt'', though  more often rendered ''kaput'' in English.  The same word is also borrowed from German into Greek and Swedish, with approximately the same meaning.
