--- a/wiki/sangfroid.wikitext
+++ b/wiki/sangfroid.wikitext
@@ -1,4 +1,7 @@
 ==English==
 
 === Noun===
-'''the ability to stay calm in a difficult or dangerous situation'''
+''''the sangfroid''''
+
+# Self-possession or imperturbability especially under strain
+#: "He handled the stressful situation with great sangfroid"
