legit term, fixed entry <fudgepacker#66846>

--- a/wiki/fudgepacker.wikitext
+++ b/wiki/fudgepacker.wikitext
@@ -1,1 +1,6 @@
-a male homosexual... approved by jennifer brewer
+==English==
+
+===Noun===
+'''fudgepacker'''
+
+# (''slang, highly vulgar'') Derogatory term for a homosexual man.
