--- a/wiki/%E9%94%9C.wikitext
+++ b/wiki/%E9%94%9C.wikitext
@@ -12,15 +12,15 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning'''
+* '''Common Meaning''': surname
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': qí (qi2) or yi(yi3)
+*** '''[[Pinyin]]''': qí (qi2), yi (yi3)
 *** '''[[Wade-Giles]]''': ch'i<sup>2</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -31,20 +31,7 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[錡]]
 
-* '''Other info''': 姓，锜姓者，目前主要居于福建省福清市（近两千人）和福建省安溪县（人数不详），台湾也有若干人。有疑问者可联系邮箱aa1937@hotmail.com或aa1937@sina.com。
-
-----
-
-== [[Korean]] [[Hanja]] ==
-
-* '''[[Hangeul]]''': 기, 의
-
-* '''[[Eumhun]] reading''': 
-
-* '''Romanizations'''
-** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': gi, ui
-** '''[[McCune-Reischauer]]''': ki, ŭi
-** '''[[Yale]]''': ki, uy
+* '''Other info''':
 
 ----
 
