--- a/wiki/Injil.wikitext
+++ b/wiki/Injil.wikitext
@@ -1,13 +1,5 @@
-== [[Indonesian]] ==
+==Indonesian==
 
 # [[gospel]]
-
-=== [[usage]] ===
-# [[Saya]] sedang membaca '''Injil'''.
-#* I am reading Bible.
-
-=== [[synonym]] ===
-
-
-=== [[search keyword]] ===
-* bahasa_indonesia
+#: ''Inilah Injil Yesus Kristus menurut Matius / Markus / Lukas / Yohanes''
+#:: (A reading from the Gospel of Jesus Christ according to Matthew / Mark / Luke / John)
