--- a/wiki/ketchup.wikitext
+++ b/wiki/ketchup.wikitext
@@ -1,3 +1,10 @@
-1.  A tomato-vinegar based sauce.
+==English==
+===Etymology===
+鮭汁 (ke-jip)
 
-Also spelt Catsup.
+===Noun===
+
+# A tomato-vinegar based sauce.
+
+===Variant spelling===
+*[[catsup]]
