--- a/wiki/sangfroid.wikitext
+++ b/wiki/sangfroid.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 === Noun===
-''''the sangfroid''''
+'the '''sangfroid''' '
 
 # Self-possession or imperturbability especially under strain
 #: "He handled the stressful situation with great sangfroid"
