--- a/wiki/Deutschland.wikitext
+++ b/wiki/Deutschland.wikitext
@@ -1,3 +1,8 @@
+== German ==
+===Proper noun===
+'''Deutschland''' <!--gender-->
 
-== Headline text ==
- I have a bear, wich Janis got from Austrian alpi. This bear can yodel, like rustics in leads.
+# [[Germany]]
+
+===Related terms===
+*[[deutsch]]
