--- a/wiki/deutsch.wikitext
+++ b/wiki/deutsch.wikitext
@@ -2,10 +2,12 @@
 ===Noun===
 '''Deutsch'''
 
-*[[German]]
+#[[German]]
 
-[[de:Deutsch]]
-[[nl:Deutsch]]
+===Related terms===
+*[[Deutschland]]
 
 ===Translations===
 *[[Anglo-Saxon]]: [[þéodisc]] ''adj'', ''n''
+[[de:Deutsch]]
+[[nl:Deutsch]]
