Added 2 vt definitions <precipitate#56031>

--- a/wiki/precipitate.wikitext
+++ b/wiki/precipitate.wikitext
@@ -1,5 +1,9 @@
 ==English==
 
+===Transitive verb===
+# To make something happen suddenly and quickly.
+# (''formal'') To throw an object or person from a great height.
+
 ===Intransitive verb===
 # (''chemistry'') To come out of a liquid solution into solid form.
 #: ''Adding the acid will cause the salt to precipitate.''
