Corrected numbering <svelte#57123>

--- a/wiki/svelte.wikitext
+++ b/wiki/svelte.wikitext
@@ -3,8 +3,6 @@
 from Italian
 ===Adjective===
 
-# attractively [[thin]]. 
-
-::(''note'') It is mainly used as a compliment, as words like "[[thin]]" and "[[skinny]]" could be used in negative connotations.
-
-# gracefully slender.
+# Attractively [[thin]].
+#: (''note'') It is mainly used as a compliment, as words like "[[thin]]" and "[[skinny]]" could be used in negative connotations.
+# Gracefully slender.
