--- a/wiki/invariant.wikitext
+++ b/wiki/invariant.wikitext
@@ -1,8 +1,8 @@
 ==English==
 ===Adjective===
 '''invariant'''
-# never changing 
 
+# never changing 
 
 ====Synonyms====
 * [[invariable]]
@@ -13,11 +13,30 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*'''German''': [[unveränderlich]]
+*German: [[unveränderlich]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+
 |}
 |}
+
+----
+
+==French==
+===Adjective===
+'''invariant'''
+
+# [[invariable]]
+
+====Synonym====
+*[[invariable]]
+
+===Noun===
+'''invariant''' ''m''
+
+#(''phys.'', ''maths'') [[invariable]]
+
+===Related terms===
+*[[variant]]
