--- a/wiki/Injil.wikitext
+++ b/wiki/Injil.wikitext
@@ -3,3 +3,7 @@
 # [[gospel]]
 #: ''Inilah Injil Yesus Kristus menurut Matius / Markus / Lukas / Yohanes''
 #:: (A reading from the Gospel of Jesus Christ according to Matthew / Mark / Luke / John)
+
+===Related terms===
+*[[evangel]]
+*[[إنجيل]]
