Wasn't a stub, just needed a bit of formatting <onomatophobia#66852>

--- a/wiki/onomatophobia.wikitext
+++ b/wiki/onomatophobia.wikitext
@@ -1,3 +1,10 @@
-'''Onomatophobia''' (n.) is the fear of certain names or words.
+==English==
 
-{{stub}}
+===Noun===
+'''onomatophobia'''
+
+# The fear of hearing particular names or words.
+
+===Related Terms===
+*[[onomatopoeia]]
+*[[phobia]]
