Restored dropped adjective <narrative#43381>

--- a/wiki/narrative.wikitext
+++ b/wiki/narrative.wikitext
@@ -12,6 +12,7 @@
 ===Adjective===
 '''narrative'''
 # Telling a story 
+# Being overly talkative; [[garrulous]]
  
 ====Related terms====
 *[[narrate]] v
