--- a/wiki/antagonize.wikitext
+++ b/wiki/antagonize.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Transative Verb===
 '''antagonize'''
-*to work against; [[oppose]].
+*to work against; [[oppose]]. esp. in hopes of incurring reaction.
 
 ====Contrasted====
 *[[appease]], [[quell]]
