--- a/wiki/antagonize.wikitext
+++ b/wiki/antagonize.wikitext
@@ -1,7 +1,8 @@
 ==English==
 ===Transative Verb===
 '''antagonize'''
-*to work against; [[oppose]]. esp. in hopes of incurring reaction.
+*to work against; [[oppose]].
+esp. to incite reaction.
 
 ====Contrasted====
 *[[appease]], [[quell]]
