--- a/wiki/antagonize.wikitext
+++ b/wiki/antagonize.wikitext
@@ -2,7 +2,7 @@
 ===Transative Verb===
 '''antagonize'''
 *to work against; [[oppose]].
- esp. to incite reaction.
+**esp. to incite reaction.
 
 ====Contrasted====
 *[[appease]], [[quell]]
