--- a/wiki/%E7%9F%AD.wikitext
+++ b/wiki/%E7%9F%AD.wikitext
@@ -11,7 +11,7 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#[[short]]
+*# [[short]]
 *# [[brief]]
 *# [[deficient]], [[lacking]]
 
@@ -29,6 +29,74 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': dyun2
 
+===Adjective===
+
+*#[[short]], [[brief]]
+
+====Antonym====
+:[[長]] / [[长]] (cháng)
+
+===Compounds===
+*[[短袄]]
+*[[短兵相接]]
+*[[短波]]
+*[[短不了]]
+*[[短长]]
+*[[短程]]
+*[[短秤]]
+*[[短处]]
+*[[短传]]
+*[[短粗]]
+*[[短促]]
+*[[短打]]
+*[[短打扮儿]]
+*[[短大衣]]
+*[[短刀]]
+*[[短笛]]
+*[[短发]]
+*[[短工]], [[短工儿]]
+*[[短褂儿]]
+*[[短号]]
+*[[短简]], [[短柬]]
+*[[短见]]
+*[[短剑]]
+*[[短剧]]
+*[[短距离]]
+*[[短裤]]
+*[[短款]]
+*[[短路]]
+*[[短命]]
+*[[短命鬼]], [[短命鬼儿]]
+*[[短跑]]
+*[[短篇小说]]
+*[[短平快]]
+*[[短评]]
+*[[短期]]
+*[[短气]]
+*[[短浅]]
+*[[短欠]]
+*[[短枪]]
+*[[短球]]
+*[[短拳]]
+*[[短缺]]
+*[[短裙]]
+*[[短衫]]
+*[[短少]]
+*[[短视]]
+*[[短途]]
+*[[短袜]]
+*[[短线]]
+*[[短线产品]]
+*[[短小]]
+*[[短小精悍]]
+*[[短袖]]
+*[[短靴]]
+*[[短讯]]
+*[[短训班]]
+*[[短语]]
+*[[短暂]]
+*[[短装]]
+
 * '''Other info''': 
 
 ----
@@ -38,6 +106,25 @@
 * '''Readings'''
 ** '''[[On]]''': [[たん]] (tan)
 ** '''[[Kun]]''': [[みじかい]] (mijikai)
+
+===Compounds===
+*[[短音]]
+*[[短歌]]
+*[[短気]]
+*[[短期]]
+*[[短距離]]
+*[[短剣]]
+*[[短冊]]
+*[[短銃]]
+*[[短所]]
+*[[短小]]
+*[[短針]]
+*[[短調]]
+*[[短刀]]
+*[[短文]]
+*[[短編]]
+*[[短命]]
+*[[短慮]]
 
 * '''Other info''':  
 
