--- a/wiki/philosophy.wikitext
+++ b/wiki/philosophy.wikitext
@@ -1,7 +1,6 @@
 == Etymology ==
 
-from Greek (philosophia): philos = love
-                          sophia = wisdom
+from Greek (philosophia): philos = love + sophia = wisdom
 
 == Pronunciation ==
 
