--- a/wiki/philosophy.wikitext
+++ b/wiki/philosophy.wikitext
@@ -1,17 +1,18 @@
-== Etymology ==
+==English==
+=== Etymology ===
 
 from Greek (philosophia): philos = love + sophia = wisdom
 
-== Pronunciation ==
+=== Pronunciation ===
 
 
-== Noun ==
+=== Noun ===
 
 1.  A comprehesive system of belief that are, genrally, divided into five major subtopics:  [[Logic]]; [[Metaphysics]]; [[Epistemology]]; [[Ethics]] and [[Esthetics]]
 
 2. A general principle (usually moral)
 
-=== Translations ===
+==== Translations ====
 
 *[[Finnish]]: [[filosofia]]
 *[[German]]: [[Philosophie]]
