--- a/wiki/wisdom.wikitext
+++ b/wiki/wisdom.wikitext
@@ -8,8 +8,7 @@ From '''[[wise]]''' + noun of state suffix '''[[-dom]]''', equivalent to ''[[-ne
 #An element of personal character that enables one to distinguish the wise from the unwise.
 #A piece of [[wise]] advice.
 #The ability to apply relevant [[knowledge]] in an insightful way, especially to different situations from that in which the knowledge was gained
-#(''theology'') The ability to know the application of spiritual [[truth]]s in the same vein as above
-
+#(''theology'') The ability to know the application of spiritual [[truth]]s
 ====Translations====
 {| border=0 width=100%
 |-
