--- a/wiki/prodigy.wikitext
+++ b/wiki/prodigy.wikitext
@@ -1,8 +1,11 @@
+==English==
 ===Pronunciation===
 *[[w:AHD|AHD]]: prŏd'ə-jē
 
 ===Noun===
 '''prodigy''' (plural: [[prodigies]])
+
+#an extremely [[talent]]ed individual
 
 ===Related terms===
 *[[prodigious]]
