--- a/wiki/aesthetics.wikitext
+++ b/wiki/aesthetics.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Noun===
-#The [[study]] or [[philosophy]] of [[beauty]], also spelled [[aesthetics]]
+#The [[study]] or [[philosophy]] of [[beauty]], also spelled esthetics
