--- a/wiki/beauty.wikitext
+++ b/wiki/beauty.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''beauty''' ([[uncountable]] and [[countable]]; ''plural:'' [[beauties]])
 
-#the property or quality that is pleasing, fine, good looking
+#the property or quality that is pleasing, fine, good looking, [[comeliness]]
 #someone that is [[beautiful]]
 #something that is particularly good
 #:''What a goal, what a beauty''
