--- a/wiki/truth.wikitext
+++ b/wiki/truth.wikitext
@@ -1,9 +1,9 @@
 ===Noun===
 '''truth'''
 
-#That which is true.
+#That which is [[true]].
 #That which is accepted by a general consensus to be true.
-#That which conforms to reality.
+#That which conforms to [[reality]].
 
 ====Antonyms====
 [[lie]], [[untruth]], [[nonsense]], [[falsehood]]
