--- a/wiki/nullification.wikitext
+++ b/wiki/nullification.wikitext
@@ -4,4 +4,5 @@
 
 '''nullification'''
 
-#The act of nullifying; a rendering void and of no effect, or of no legal effect.
+#The act of [[nullify]]ing; a rendering [[void]] and of no effect, or of no legal effect.
+#[[removal]]
