--- a/wiki/annul.wikitext
+++ b/wiki/annul.wikitext
@@ -1,5 +1,8 @@
+==English==
 ===Verb===
 '''to annul''' ([[annuls]], [[annulled]], [[annulling]])
+#To formally [[revoke]] the validity of
+#To disolve a [[marital]] union on the grounds that it is not valid
 
 ====Related terms====
 *[[null]]
@@ -12,4 +15,4 @@
 *German: [[annullieren]]
 *Greek: [[ακυρώσει]]
 *[[Romanica]]: [[annullar]]
-*Russian: [[аннулировать]] (annulirovat')
+*Russian: [[аннулировать]] (annulirovat)
