--- a/wiki/%E3%83%81%E3%83%A3%E3%82%A4%E3%83%AB%E3%83%89.wikitext
+++ b/wiki/%E3%83%81%E3%83%A3%E3%82%A4%E3%83%AB%E3%83%89.wikitext
@@ -1,16 +1,15 @@
 ==Japanese==
-
 ===Noun===
-;チャイルド 
+'''チャイルド'''
 
-# [[child]]
+# (hardly ever, in compounds?) [[child]]
 
 ===Synonyms===
-<div style="font-size:18px">
+<div>
 <ruby><rb>[[子]]</rb><rt>[[こ]]</rt></ruby> / 
 <ruby><rb>[[子女]]</rb><rt>[[しじょ]]</rt></ruby> / 
 <ruby><rb>[[子供]]</rb><rt>[[こども]]</rt></ruby> / 
-<ruby><rb>[[児]]</rb><rt>[[じ]]</rt></ruby> / 
+<ruby><rb>[[児童]]</rb><rt>じどう</rt></ruby> / 
 <ruby><rb>[[童]]</rb><rt>[[わらべ]]</rt></ruby> / 
-<ruby><rb>[[幼児]]</rb><rt>[[ようじ]]</rt></ruby>
+<ruby><rb>[[幼児]]</rb><rt>ようじ</rt></ruby>
 </div>
