/* Noun */ trying to dodge a bullet while putting up a fence <marriage#38939>

--- a/wiki/marriage.wikitext
+++ b/wiki/marriage.wikitext
@@ -17,9 +17,10 @@ Middle English '''[[mariage]]''', from Old French '''[[mariage]]''', from '''[[m
 
 ===Noun===
 '''marriage'''
-# A permanent, legally binding union.
+# A permanent, legally binding union between two persons.  The exact legal description of this union is in flux.
 #: ''The legal restrictions of a marriage, including gender of persons, number of persons, age of persons and other specifications differ depending on the governing bodies chosen restrictions.''
 # A joining of two parts.
+# (''theology'') The union before [[God]] of a [[man]] and a [[woman]].
 
 ====Translations====
 *Chinese characters: [[婚]], [[姻]]
