--- a/wiki/%E3%83%81%E3%83%A3%E3%82%A4%E3%83%AB%E3%83%89.wikitext
+++ b/wiki/%E3%83%81%E3%83%A3%E3%82%A4%E3%83%AB%E3%83%89.wikitext
@@ -13,3 +13,6 @@
 <ruby><rb>[[童]]</rb><rt>[[わらべ]]</rt></ruby> / 
 <ruby><rb>[[幼児]]</rb><rt>ようじ</rt></ruby>
 </div>
+
+===See also===
+*[[ストリートチルドレン]]
