/* Translations */ <love child#41404>

--- a/wiki/love_child.wikitext
+++ b/wiki/love_child.wikitext
@@ -13,6 +13,7 @@
 *Finnish: [[avioton lapsi]]
 *Interlingua: [[filio illegitime]]
 *Italian: [[figlio illegittimo]] ''m''
+*Japanese: [[私生児]]
 *Spanish: [[hijo natural]] ''m'', [[hija natural]] ''f''
 *Volapük: [[nematikacil]]
 
