--- a/wiki/polyandry.wikitext
+++ b/wiki/polyandry.wikitext
@@ -1,5 +1,6 @@
+==English==
 === Noun ===
-The having of a plurality of husbands at the same time; usually, the marriage of a woman to more than one man, or the practice of having several husbands, at the same time; -- opposed to [[monogamy]]; as, the nations of the East practiced '''polygamy'''. See the Note under [[bigamy]], and compare [[polygamy]] and [[polygyny]].
+The having of a plurality of [[husband]]s at the same time; usually, the marriage of a [[woman]] to more than one [[man]], or the practice of having several husbands, at the same time; -- opposed to [[monogamy]]; as, the nations of the East practiced '''polygamy'''. See the Note under [[bigamy]], and compare [[polygamy]] and [[polygyny]].
 
 
 ====See also====
