--- a/wiki/polygyny.wikitext
+++ b/wiki/polygyny.wikitext
@@ -1,4 +1,5 @@
+==English==
 ===Etymology===
 [[Poly-]] + Greek: woman, wife
 ===Noun===
-#The state or practice of having several wives at the same time; marriage to several wives - [[H. Spenser]]
+#The state or practice of having several [[wife|wives]] at the same time; marriage to several wives - [[H. Spenser]]
