--- a/wiki/same.wikitext
+++ b/wiki/same.wikitext
@@ -1,9 +1,10 @@
-Abstract pronoun
+==English==
+===Abstract pronoun===
 
-#The identical thing, ditto. ''the same can be said of him''
-#similarity ''too much the same''
+#The [[identical]] thing, ditto, ibid. ''the same can be said of him''
+#[[similarity]] ''too much the same''
 
-Adjective
+===Adjective===
 
-#identical thing, ditto ''same person''
+#identical thing, ditto, ibid. ''same person''
 #similarity ''same difference''
