--- a/wiki/location.wikitext
+++ b/wiki/location.wikitext
@@ -5,7 +5,7 @@
 '''location'''
 
 :1. The act of locating.
-:2. A particular place.
+:2. A particular [[place]] in physical [[space]].
 
 
 ===related terms===
