--- a/wiki/unique.wikitext
+++ b/wiki/unique.wikitext
@@ -1,12 +1,11 @@
-==Etymology==
-From Latin ''[[unicus]]'', '''unique''', from ''[[unus]]'' + adjective suffix ''[[-icus]]''
-
 ==English==
+===Etymology===
+From Latin ''[[unicus]]'', '''unique''', from ''[[unus]]'' + adjective suffix ''[[-icus]]''
 ===Adjective===
 '''unique''' (''not [[comparable]], but see usage note below'')
 
-#The only one of its kind.
-#(''non-standard'') Of a rare quality.
+#The only one of its [[kind]].
+#(''non-standard'') Of a [[rare]] [[quality]].
 
 ====Usage note====
 *[[Unique]] in its standard sense is not comparable.  In its non-standard sense, however, it is usually compared as '''more unique''', '''most unique''',  and occasionally as '''uniquer''', '''uniquest'''.
