--- a/wiki/ennui.wikitext
+++ b/wiki/ennui.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Verb===
 '''ennui'''
-# To be bored/ the feeling of being bored, by something tedious.
+# To be [[bored]]/ the feeling of being bored, by something [[tedious]].
 
 ==French==
 #boredom
